src/objects/ACCL__Account_Payer__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Payers</relationshipLabel>
        <relationshipName>Account_Payers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Main__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Main Payer</description>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Payers (Payer)</relationshipLabel>
        <relationshipName>Customer_Payers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Code__c</fullName>
        <description>This is formula field which displays Customer code value from Account</description>
        <formula>ACCL__Account__r.ACCL__Account_Number__c</formula>
        <inlineHelpText>This is formula field which displays Customer code value from Account</inlineHelpText>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Distribution_Channel__c</fullName>
        <formula>ACCL__Account__r.UL_Distribution_Channel_Code__c</formula>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Division__c</fullName>
        <formula>ACCL__Account__r.UL_Activity_Sector_Division_Code__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Sales_Organization__c</fullName>
        <formula>ACCL__Account__r.ACCL__Sales_Org__c</formula>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <label>Customer Payer</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Customer Payer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Payers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>This validates that Valid From cannot be greater than Valid Thru</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From cannot be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>